--- a/first_year_tcr_exercise 3.1/style.css
+++ b/first_year_tcr_exercise 3.1/style.css
@@ -37,3 +37,24 @@ nav a {
 nav img {
   width: 5vw;
 }
+
+<html>
+<head>
+<style>
+footer {
+  text-align: center;
+  padding: 3px;
+  background-color: DarkSalmon;
+  color: white;
+}
+</style>
+</head>
+<body>
+
+<footer>
+  <p>Author: Hege Refsnes<br>
+  <a href="mailto:hege@example.com">hege@example.com</a></p>
+</footer>
+
+</body>
+</html>
