--- a/opdracht 4.1/style.css
+++ b/opdracht 4.1/style.css
@@ -1,8 +1,19 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    min-height: 200vh;
+}
+
+
 h1 {
     font-size: 24px;
-    color: blue;
+    color: white;
     font-weight: bold;
-    font-style: italic;
+    font-style: bold;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 h2 {
@@ -26,6 +37,28 @@ a {
     text-decoration: none;
 }
 
-.paragraaf{
+.paragraaf {
     font-weight: bold;
+}
+
+.header {
+    background-image:url("./img/Geometric.png");
+    background-size: cover;
+    background-position: center;
+    padding: 0%;
+    text-align: center;
+    color: white;
+    font-size: 30px;
+    height: 100px;
+}
+
+header {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: large;
+
+}
+
+img{
+    
 }
